@@ -1,3 +1,7 @@
+Courtney Cavin - Sat Jul 16 2005
+	integrated coob's new settings system
+	allowed font changing without restarting
+
 Scott Lawrence - Tue Jul 14 2005
 	Display of load average in title bar
 	Display of battery level as a digit instead of graphically
